--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "knoewloge-assenments-8",
+  "name": "knowlage-asignment",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
